ghc-4335c07/testsuite/tests/indexed-types/should_fail/T7938.stderr

T7938.hs:12:16: error:
    • Expected a type, but ‘(KP :: KProxy k2)’ has kind ‘KProxy k2’
    • In the type ‘(KP :: KProxy k2)’
      In the type instance declaration for ‘Bar’
      In the instance declaration for ‘Foo (a :: k1) (b :: k2)’
